@@ -102,7 +102,11 @@
 
 	;; 0: SwinSID extensions disabled
 	;; 1: SwinSID extensions enabled
-#define ENABLE_SWINSID 0
+#define DEFAULT_ENABLE_SWINSID 0
+
+	;; 0: only waveform 0-8 selectable
+	;; 1: waveform 0-15 selectable (e.g. for selecting additional SwinSID Waveforms)
+#define DEFAULT_ENABLE_UPPER_WAVEFORMS 0
 
 	;; assign the AOUT channels for the F2A (Filter to AOUT function) here
 	;; we have 4 assignments for CutOff Left/Right and Resonance Left/Right
