@@ -341,8 +341,10 @@ SIDSE_M_UPDATESTAT_MACRO	MACRO voice_base, sid_base, swinsid_mode, swinsid_phase
 	movlw	SID_Ix_Vx_WAVEFORM
 	swapf	PLUSW0, W
 	andlw	0xf6
+#if DEFAULT_ENABLE_UPPER_WAVEFORMS == 0
 	btfsc	WREG, 7; ensure that noise will not "lock on" like described in 6581 spec
-	andlw 0x8f 
+	andlw	0x8f
+#endif
 	iorwf	sid_base + SIDx_V1_CTRL, F, BANKED
 
 	;; if ABW (ADSR bug workaround) function active, update ADSR register only when the gate is set
@@ -353,7 +355,7 @@ SIDSE_M_UPDATESTAT_MACRO	MACRO voice_base, sid_base, swinsid_mode, swinsid_phase
 	movlw	SID_Ix_Vx_SR
 	movff	PLUSW0, sid_base + SIDx_V1_ENV_SR
 SIDSE_M_UpdateStatRegs_NoADSR
-#if ENABLE_SWINSID
+#if DEFAULT_ENABLE_SWINSID
 	movlw	SID_Ix_Vx_SWINSID_MODE
 	movff	PLUSW0, swinsid_mode
 	movlw	SID_Ix_Vx_SWINSID_PHASE
@@ -383,7 +385,7 @@ SIDSE_M_UpdateStatRegs_Mono
 	;; mono mode: copy over *all* SID registers of SIDL to SIDR
 	lfsr	FSR1, SIDL_BASE
 	lfsr	FSR2, SIDR_BASE
-#if ENABLE_SWINSID
+#if DEFAULT_ENABLE_SWINSID
 	movlw	0x20
 #else
 	movlw	SIDx_MODE_VOL+1
